Add GitHub Link to Project.

--- a/index/index.html
+++ b/index/index.html
@@ -21,7 +21,10 @@
     <div class="grid-container">
       <div class="header">
         <div class="logo">
-          <a href="#" class="fa fa-github"></a>
+          <a
+            href="https://github.com/shomalikhashayar"
+            class="fa fa-github"
+          ></a>
         </div>
         <div class="header-navigation">
           <ul>
